--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.abhi.database.MainActivity"
+    tools:context=".MainActivity"
     android:background="@color/colorPrimary">
 
 
@@ -47,7 +47,7 @@
         android:background="@color/colorAccent" />
 
     <TextView
-        android:text="new to our app?"
+        android:text="New to the app?"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
